# utr_pairpred

./: .gitignore  README.md  _model_dict.py  dataset.py  get_seq_embedding.py  model.py  pred_analysis.ipynb  pyproject.toml  seq_preprocess.py  trainer.py  trainer_contrastive_learning.py  trainer_contrastive_learning_multi.py  trainer_pred_analysis.py  trainer_randomforest.py  utils.py
config/: base_trainer.yaml  cnn_ave.yaml  cnn_forward.yaml  human_cl.yaml  human_sv.yaml  mlp_ave.yaml  mlp_hyena32k.yaml  mlp_split_ave.yaml  mlp_tranc_forward.yaml  mouse_cl.yaml  mouse_rf.yaml  mouse_sv.yaml  random_forest.yaml
notebooks/: RBP_interaction_analysis.ipynb  crossval_analysis.ipynb  expression_analysis.ipynb  motif_analysis.ipynb  sequential_analysis.ipynb
notebooks_past/: sequential_analysis.ipynb
preprocess/: calc_mfe.py  create_seq_df.py  get_seq_embedding.py  huggingface.py  huggingface_hyena.py
scripts/: calc_mfe.sh  cd_hit.sh  cd_hit_mouse.sh  compute_matrix_pabpc4.sh  compute_matrix_pcbp2.sh  create_seqdf.sh  create_seqdf_ensembl.sh  create_seqdf_max32k.sh  create_seqdf_mouse.sh  get_emb.sh  get_emb_edge.sh  get_emb_hyenadna.sh  get_emb_mouse.sh  get_emb_rinalmo.sh  get_emb_rinalmo_ave.sh  get_emb_rnafm.sh  get_emb_withpad.sh  get_emb_zebrafish.sh  get_feature.sh  get_feature_mouse.sh  get_features_human.sh  get_rf_feature.sh  lin.sh  linearfold.sh  make_blastdb.sh  plotmaps.sh  riblast_db.sh  run_cl_seeds.sh  run_seeds.sh  run_train_cl.sh  run_train_example.sh  run_train_sv.sh
src/: _model_dict.py  base_trainer.py  dataset.py  model.py  run_train_CL.py  (+12 more)
(+177 files in other folders)
